--- a/h/templates/layouts/base.html
+++ b/h/templates/layouts/base.html
@@ -12,8 +12,7 @@
 
     <title>
       {%- block title -%}
-        {%- block page_title %}{% endblock -%}
-        {%- if self.page_title() %} | {% endif -%}
+        {%- if self.page_title %}{{self.page_title()}} | {% endif -%}
         Hypothesis
       {%- endblock -%}
     </title>
