Relieve the thread directive of list responsibilities
The thread directive is doing rather a lot:

- rendering a list of cards
- rendering a card
- rendering a reply within a card

This change relieves the thread directive of the first of these
responsibilities.

--- a/h/templates/client/thread.html
+++ b/h/templates/client/thread.html
@@ -42,6 +42,7 @@
       thread="child" thread-filter
       ng-include="'thread.html'"
       ng-init="child.message.id || threadFilter.active(false)"
+      ng-class="{'thread-collapsed': vm.collapsed}"
       ng-repeat="child in vm.container.children
                  | orderBy : 'message.updated' : true"
       ng-show="count('edit') || count('match') || !threadFilter.active()">
