--- a/h/templates/client/viewer.html
+++ b/h/templates/client/viewer.html
@@ -1,7 +1,6 @@
 <!-- Thread view -->
 <ul class="stream-list"
     deep-count="count"
-    thread="threadRoot"
     thread-filter="search.query">
   <li ng-show="threadFilter.active()"
       ><span ng-pluralize
@@ -43,9 +42,8 @@
       ng-mouseenter="focus(child.message)"
       ng-click="scrollTo(child.message)"
       ng-mouseleave="focus()"
-      ng-repeat="child in vm.container.children | orderBy : sort.predicate"
-      ng-show="vm.container && shouldShowThread(child) &&
-               (count('edit') || count('match') || !threadFilter.active())">
+      ng-repeat="child in threadRoot.children | orderBy : sort.predicate"
+      ng-show="shouldShowThread(child) && (count('edit') || count('match') || !threadFilter.active())">
   </li>
 </ul>
 <!-- / Thread view -->
