Add emphasis to selected annotations
New feature:

The highlights belonging to the selected annotations
stays visible in the document, even if always-on mode
(a.k.a. "visible highlights") is off, and even if the
pointer is not currently hovering over the annotation card.

--- a/h/static/styles/inject.scss
+++ b/h/static/styles/inject.scss
@@ -86,6 +86,10 @@ $base-font-size: 14px;
   }
 }
 
+.annotator-hl.annotator-hl-selected {
+  background-color: $highlight-color-select;
+}
+
 // Sidebar
 .annotator-frame {
   @import 'reset';
