Implement new design for search status bar
This provides a clearer design for the search status
button.

The new design is part of the groups roll-out and
is only shown when the groups feature is enabled.

T-93

--- a/h/static/styles/app.scss
+++ b/h/static/styles/app.scss
@@ -12,6 +12,7 @@ $base-line-height: 20px;
 @import './primary-action-btn';
 @import './dropdown-menu-btn';
 @import './publish-annotation-btn';
+@import './search-status-bar';
 @import './share-link';
 
 body {
