--- a/h/templates/client/search_status_bar.html
+++ b/h/templates/client/search_status_bar.html
@@ -1,12 +1,39 @@
-<li ng-show="filterActive">
+<div ng-if="newDesign" class="search-status-bar" ng-show="filterActive">
+  <button class="primary-action-btn primary-action-btn--short"
+          ng-click="onClearSelection()"
+          title="Clear the search filter and show all annotations"
+  >
+    <i class="primary-action-btn__icon h-icon-close"></i> Clear search
+  </button>
+  <span ng-pluralize
+           count="filterMatchCount"
+           when="{'0': 'No results for “{{searchQuery}}”',
+                  'one': '1 search result',
+                  'other': '{} search results'}"></span>
+</div>
+<div ng-if="newDesign" class="search-status-bar" ng-show="!filterActive && selectionCount > 0">
+  <button class="primary-action-btn primary-action-btn--short"
+          ng-click="onClearSelection()"
+          title="Clear the selection and show all annotations"
+  >
+    <i class="primary-action-btn__icon h-icon-close"></i> Clear selection
+  </button>
+  <span ng-pluralize
+           count="selectionCount"
+           when="{'0': 'No annotations selected',
+                  'one': '1 selected annotation',
+                  'other': '{} selected annotations'}"></span>
+</div>
+<div ng-if="!newDesign" class="search-status-bar" ng-show="filterActive">
   <span ng-pluralize
            count="filterMatchCount"
            when="{'0': 'No results for “{{searchQuery}}”.',
                   'one': 'Found one result.',
                   'other': 'Found {} results.'}"></span>
   <a href="" ng-click="onClearSelection()">Clear search</a>.
-</li>
-<li ng-show="!filterActive && selectionCount > 0">
+</div>
+<div ng-if="!newDesign" class="search-status-bar"
+  ng-show="!filterActive && selectionCount > 0">
   <span ng-pluralize
            count="selectionCount"
            when="{'0': 'No annotations selected.',
