--- a/h/templates/client/top_bar.html
+++ b/h/templates/client/top_bar.html
@@ -57,8 +57,7 @@
       <div class="pull-right user-picker" dropdown keyboard-nav>
         <span role="button"
               data-toggle="dropdown" dropdown-toggle>
-          <!-- TODO - Replace the 'settings' icon with an 'account' icon !-->
-          <i class="h-icon-settings"></i><i class="h-icon-arrow-drop-down"></i>
+          <i class="h-icon-account"></i><i class="h-icon-arrow-drop-down"></i>
         </span>
         <ul class="dropdown-menu pull-right" role="menu">
           <li ng-show="authUser"><a href="" ng-click="accountDialog.visible = true">Account</a></li>
