--- a/h/templates/app.html.jinja2
+++ b/h/templates/app.html.jinja2
@@ -100,6 +100,12 @@
 {% block ga_pageview %}{% endblock %}
 
 {% block scripts %}
+  <script>
+    window.hypothesis = window.hypothesis || {};
+    window.hypothesis.settings = {
+      apiUrl: "{{ request.route_url('api') }}",
+    };
+  </script>
   {% assets "app_js" %}
     <script src="{{ ASSET_URL }}"></script>
   {% endassets %}
