--- a/h/templates/app.html.jinja2
+++ b/h/templates/app.html.jinja2
@@ -42,26 +42,11 @@
   </div>
 
   <div class="content" ng-cloak>
-    <!-- Account Dialog -->
-    <div class="sheet" ng-if="accountDialog.visible">
-      <i class="close h-icon-close"
-         role="button"
-         title="Close"
-         ng-click="accountDialog.visible = false"></i>
-      {{ include_raw("h:templates/client/auth.html") }}
-    </div>
-    <!-- / Account Dialog -->
-
-    <!-- Sidebar tutorial -->
+    <login-form ng-if="accountDialog.visible"
+                on-close="accountDialog.visible=false"></login-form>
     <sidebar-tutorial ng-if="isSidebar"></sidebar-tutorial>
-
-    <!-- Share View Dialog -->
     <share-dialog ng-show="shareDialog.visible"></share-dialog>
-    <!-- / Share View Dialog -->
-
-    <!-- Angular view -->
     <main ng-view=""></main>
-    <!-- / Angular view -->
   </div>
 {% endblock %}
 
@@ -74,6 +59,9 @@
   </script>
   <script type="text/ng-template" id="group_list.html">
     {{ include_raw("h:templates/client/group_list.html") }}
+  </script>
+  <script type="text/ng-template" id="login_form.html">
+    {{ include_raw("h:templates/client/login_form.html") }}
   </script>
   <script type="text/ng-template" id="markdown.html">
     {{ include_raw("h:templates/client/markdown.html") }}
