Decouple the Hypothesis service URL from the app's base URI
Previously the URL set as the <base> tag was used indirectly
to specify the URL of the Hypothesis service that various
links referred to.

Make things clearer by adding an explicit 'serviceUrl' attribute
to the Hypothesis client settings and use that in place of the
baseURI.

The custom template whitelist configuration has been removed
because all of the templates are embedded in app.html, so the
default value of ['self'], allowing templates to be loaded
only from the same domain as the page, is fine.

--- a/h/templates/client/annotation.html
+++ b/h/templates/client/annotation.html
@@ -9,7 +9,7 @@
       <span>
         <a class="annotation-user"
            target="_blank"
-           ng-href="{{::vm.baseURI}}u/{{vm.user()}}"
+           ng-href="{{::vm.serviceUrl}}u/{{vm.user()}}"
            >{{vm.user() | persona}}</a>
       </span>
 
@@ -49,7 +49,7 @@
        target="_blank"
        title="{{vm.absoluteTimestamp}}"
        ng-if="!vm.editing() && vm.updated()"
-       ng-href="{{::vm.baseURI}}a/{{vm.id()}}"
+       ng-href="{{::vm.serviceUrl}}a/{{vm.id()}}"
        >{{vm.relativeTimestamp}}</a>
   </header>
 
