--- a/h/templates/app.html.jinja2
+++ b/h/templates/app.html.jinja2
@@ -1,10 +1,11 @@
 {% extends "layouts/base.html.jinja2" %}
 
 {% block base_tag %}
-  {# several parts of the app rely on document.baseURI returning the root
-     URL. They should be fixed to use a different source.
-  #}
-  <base target="_top" href="{{ base_url }}" />
+  {# the <base> tag is required by Angular JS when HTML 5 history is
+     enabled. We shouldn't really need this because a given instance of the app
+     only ever displays a single route.
+   #}
+  <base target="_top" href="/" />
 {% endblock %}
 
 {% block styles %}
