Hard-code schemes to https:// in share dialog
When the Share dialog is hosted in the Chrome extension
and the <base> URI is not set to point to the Hypothesis service,
the share links need to have a scheme set explicitly.

--- a/h/templates/client/share_dialog.html
+++ b/h/templates/client/share_dialog.html
@@ -15,15 +15,15 @@
           ng-value="viaPageLink"
           readonly /></p>
       <p class="share-link-icons">
-      <a href="//twitter.com/intent/tweet?url={{viaPageLink}}"
+      <a href="https://twitter.com/intent/tweet?url={{viaPageLink}}"
          target="_blank"
          title="Tweet link"
          class="share-link-icon h-icon-twitter"></a>
-      <a href="//www.facebook.com/sharer/sharer.php?u={{viaPageLink}}"
+      <a href="https://www.facebook.com/sharer/sharer.php?u={{viaPageLink}}"
          target="_blank"
          title="Share on Facebook"
          class="share-link-icon h-icon-facebook"></a>
-      <a href="//plus.google.com/share?url={{viaPageLink}}"
+      <a href="https://plus.google.com/share?url={{viaPageLink}}"
          target="_blank"
          title="Post on Google Plus"
          class="share-link-icon h-icon-google-plus"></a>
