Explicitly specify the service URL in links from the auth form
Make these links work when the app is hosted at a different
base URL from the Hypothesis service.

--- a/h/templates/client/login_form.html
+++ b/h/templates/client/login_form.html
@@ -52,7 +52,7 @@
 
         <div class="form-actions">
           <div class="form-actions-message">
-            <a href="/forgot_password" target="_blank">Forgot your password?</a>
+            <a href="{{vm.serviceUrl}}forgot_password" target="_blank">Forgot your password?</a>
           </div>
           <div class="form-actions-buttons">
             <button class="btn btn-primary" type="submit" name="login"
