--- a/h/templates/app.html.jinja2
+++ b/h/templates/app.html.jinja2
@@ -36,7 +36,7 @@
 
   <div class="create-account-banner" ng-if="isSidebar && auth.status === 'signed-out'">
     To annotate this document
-    <a href="{{ request.route_path('register') }}" target="_blank">
+    <a href="{{ request.route_url('register') }}" target="_blank">
       create a free account
     </a>
     or <a href="" ng-click="login()">sign in</a>
