Fix the /docs/help page
The embed.js template now requires additional data which was
not provided when rendered via the /docs/help route.

Resolve the issue by including the embed in the same way
that we advise users to include it.

--- a/h/templates/help.html.jinja2
+++ b/h/templates/help.html.jinja2
@@ -10,9 +10,7 @@
     <script>
       function hypothesisConfig() { return {firstRun: true} }
     </script>
-    <script async defer>
-      {% include "embed.js.jinja2" %}
-    </script>
+    <script async defer src="{{ embed_js_url }}"></script>
   {% endif %}
 {% endblock %}
 
