--- a/h/templates/embed.js.jinja2
+++ b/h/templates/embed.js.jinja2
@@ -6,7 +6,7 @@ if (typeof(window.annotator) === 'undefined') {
     return;
 }
 
-var resourceRoot = '';
+var resourceRoot;
 var resourceRootTag =
   document.querySelector('meta[name="hypothesis-resource-root"]');
 if (resourceRootTag) {
@@ -14,6 +14,9 @@ if (resourceRootTag) {
 }
 
 function resolve(url) {
+  if (!resourceRoot) {
+    return url;
+  }
   return new URL(url, resourceRoot).href;
 }
 
