--- a/h/browser/chrome/manifest.json.jinja2
+++ b/h/browser/chrome/manifest.json.jinja2
@@ -4,6 +4,7 @@
   "version": "{{ version }}",
   "version_name": "{{ version }} ({{ version_name }})",
   "manifest_version": 2,
+  "minimum_chrome_version": "38",
 
   "description": "Collaboratively annotate, highlight, and tag web pages and PDF documents.",
   "icons": {
