Fix RavenJS initialization in app and stream
app.coffee failed to initialize Raven because it looked for
config info in window.RAVEN_CONFIG instead of the #hypothesis-settings
<script> tag.

This commit makes the web service expose the Raven config info
to the site and the application in the same way, using JSON <script>
tags which are compatible with the strict CSP policy used by
the Chrome extension.

 * Expose and consume config info in the same way on
   the site and in the app.

 * Refactor settings.js to make it independent of Angular, for
   use on the site.

Fixes #2938

--- a/h/templates/app.html.jinja2
+++ b/h/templates/app.html.jinja2
@@ -60,7 +60,7 @@
     {% endfor -%}
 
     <!-- App Configuration !-->
-    <script id="hypothesis-settings" type="application/json">
+    <script class="js-hypothesis-settings" type="application/json">
       {{ app_config | safe }}
     </script>
 
